--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adopt Me</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>React Test</title>
   </head>
   <body>
     <div id="root">not rendered</div>
